--- a/source/sass/blocks/navigation.scss
+++ b/source/sass/blocks/navigation.scss
@@ -1,13 +1,62 @@
 .navigation {
+  grid-row: 2/3;
+  grid-column: 1/-1;
+
+  padding-top: 17px;
+
+  @media (max-width: $tablet) {
+    grid-row: 3/4;
+    display: none;
+
+    padding-top: 112px;
+  }
+
+  @media (max-width: $mobile) {
+    padding-top: 45px;
+  }
+}
+
+.navigation__list {
   display: flex;
   justify-content: center;
 
-  padding-top: 17px;
-  padding-left: 60px;
+  padding-left: 45px;
+
+  @media (max-width: $tablet) {
+    flex-direction: column;
+    padding-left: 0;
+  }
+
+  &--contacts {
+    display: none;
+
+    @media (max-width: $tablet) {
+      display: flex;
+      margin-top: 15px;
+    }
+  }
 }
 
 .navigation__item {
   margin-right: 35px;
+
+  @media (max-width: $tablet) {
+    margin-bottom: 40px;
+
+    &:last-child {
+      margin-bottom: 55px;
+
+      @media (max-width: $mobile) {
+        margin-bottom: 45px;
+      }
+    }
+  }
+}
+
+.navigation__item--contacts {
+  @media (max-width: $tablet) {
+    margin-bottom: 30px;
+  }
 }
 
 .navigation__item a {
@@ -16,4 +65,24 @@
   line-height: 24px;
 
   color: var(--dark);
+
+  @media (max-width: $tablet) {
+    font-size: 24px;
+    line-height: 36px;
+
+    color: var(--white);
+  }
+}
+
+.navigation__item--contacts a {
+  font-size: 18px;
+  line-height: 130%;
+  opacity: 0.75;
+}
+
+.header--open,
+.header--nojs {
+  .navigation {
+    display: block;
+  }
 }
