--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -19,6 +19,9 @@
   }
 
   @media (max-width: $tablet) {
+    padding-top: 30px;
+    padding-bottom: 30px;
+
     &--open {
       position: fixed;
       top: 0;
@@ -34,6 +37,11 @@
       background-color: var(--gold);
     }
   }
+
+  @media (max-width: $mobile) {
+    padding-top: 20px;
+    padding-bottom: 20px;
+  }
 }
 
 .header__wrapper {
@@ -48,6 +56,7 @@
     grid-template-rows: auto;
     grid-template-columns: max-content 1fr max-content;
     row-gap: 0;
+    padding-bottom: 0;
   }
 }
 
