--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -7,3 +7,7 @@
 //BLOCKS
 @import "blocks/header.scss";
 @import "blocks/navigation.scss";
+@import "blocks/promo.scss";
+@import "blocks/footer.scss";
+@import "blocks/mailing.scss";
+@import "blocks/social-icon.scss";
