--- a/source/sass/global/variables.scss
+++ b/source/sass/global/variables.scss
@@ -15,11 +15,12 @@
 
 
 $desktop: 1200px;
-$min-desktop: 1100px;
+$min-desktop: 1199px;
 
 $tablet: 1023px;
 
 $mobile: 767px;
+$mid-mobile: 479px;
 $min-mobile: 320px;
 
 $resolution: 2dppx;
