--- a/source/sass/global/variables.scss
+++ b/source/sass/global/variables.scss
@@ -6,6 +6,7 @@
   --white: #ffffff;
   --gold: #a87b62;
   --light: #f6f5f4;
+  --gold-light: #f0eae4;
 
   --white-015: rgba(255, 255, 255, 0.15);
 
