--- a/source/sass/global/variables.scss
+++ b/source/sass/global/variables.scss
@@ -7,6 +7,7 @@
   --gold: #a87b62;
   --light: #f6f5f4;
   --gold-light: #f0eae4;
+  --gold-light-03: rgba(240, 234, 228, 0.35);
 
   --white-015: rgba(255, 255, 255, 0.15);
 
