--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -11,5 +11,9 @@
 @import "blocks/mailing.scss";
 @import "blocks/social-icon.scss";
 @import "blocks/promo.scss";
+@import "blocks/new.scss";
+@import "blocks/slider.scss";
 @import "blocks/gallery.scss";
 @import "blocks/blog.scss";
+@import "blocks/faq.scss";
+@import "blocks/accordion.scss";
