--- a/source/sass/blocks/slider.scss
+++ b/source/sass/blocks/slider.scss
@@ -1,6 +1,44 @@
-.slider {}
+.slider {
+  position: relative;
+}
+
+.slider__wrapper {
+  overflow: hidden;
+}
 
 .slider__button {
-  width: 30px;
-  height: 15px;
+  position: absolute;
+  top: -120px;
+  width: 50px;
+  height: 50px;
+
+  &--prev {
+    left: 0;
+  }
+
+  &--next {
+    right: 0;
+  }
+}
+
+.slider__list {
+  display: flex;
+  margin-left: -15px;
+  margin-right: -15px;
+
+  width: 500%;
+}
+
+.slider__item {
+  padding-left: 15px;
+  padding-right: 15px;
+
+  width: 270px;
+}
+
+.slider__pagination {
+  display: flex;
+  justify-content: center;
+
+  margin-top: 60px;
 }
