--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -13,6 +13,8 @@
 @import "blocks/promo.scss";
 @import "blocks/new.scss";
 @import "blocks/slider.scss";
+@import "blocks/product.scss";
+@import "blocks/slider.scss";
 @import "blocks/gallery.scss";
 @import "blocks/blog.scss";
 @import "blocks/faq.scss";
