--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -13,9 +13,11 @@
 @import "blocks/promo.scss";
 @import "blocks/new.scss";
 @import "blocks/slider.scss";
+@import "blocks/pagination.scss";
 @import "blocks/product.scss";
 @import "blocks/slider.scss";
 @import "blocks/gallery.scss";
 @import "blocks/blog.scss";
 @import "blocks/faq.scss";
 @import "blocks/accordion.scss";
+@import "blocks/catalog.scss";
