--- a/source/sass/blocks/accordion.scss
+++ b/source/sass/blocks/accordion.scss
@@ -25,7 +25,7 @@
   display: flex;
   justify-content: space-between;
 
-  padding: 50px 38px;
+  padding: 44px 42px;
 
   @media (max-width: $tablet) {
     padding-left: 50px;
@@ -33,7 +33,7 @@
   }
 
   @media (max-width: $mobile) {
-    padding: 22px 25px;
+    padding: 17px 25px 20px 25px;
   }
 }
 
@@ -80,13 +80,13 @@
   display: none;
 
   padding-top: 20px;
-  width: 58%;
+  width: 64%;
 
   font-size: 16px;
   line-height: 130%;
 
   @media (max-width: $tablet) {
-    width: 95%;
+    width: 93%;
   }
 
   @media (max-width: $mobile) {
@@ -104,17 +104,16 @@
   display: flex;
   flex-direction: column;
 
-  padding: 20px 38px 50px 38px;
+  padding: 10px 48px 40px;
 
   @media (max-width: $tablet) {
     padding-left: 50px;
-    padding-right: 50px;
+    padding-right: 45px;
+    padding-top: 30px;
   }
 
   @media (max-width: $mobile) {
-    padding-right: 25px;
-    padding-left: 25px;
-    padding-bottom: 24px;
+    padding: 15px 36px 22px 25px;
   }
 }
 
