--- a/source/sass/blocks/blog.scss
+++ b/source/sass/blocks/blog.scss
@@ -5,6 +5,20 @@
 
   padding-top: 50px;
   padding-bottom: 50px;
+
+  @media (max-width: $mobile) {
+    padding-top: 40px;
+  }
+}
+
+.blog h2 {
+  margin-bottom: 20px;
+}
+
+.blog p {
+  @media (max-width: $mobile) {
+    margin-bottom: 48px;
+  }
 }
 
 .blog__list {
@@ -98,7 +112,11 @@
 }
 
 .blog__read {
-  padding: 70px 60px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  padding: 65px 60px;
   width: 285px;
   height: 300px;
 
@@ -118,6 +136,12 @@
     height: 300px;
   }
 
+  @media (max-width: $mobile) {
+    padding: 50px 60px;
+    width: 290px;
+    height: 256px;
+  }
+
   &--big-picture {
     position: absolute;
     bottom: 0;
@@ -125,13 +149,14 @@
 
     @media (max-width: $tablet) {
       position: static;
+      padding-top: 87px;
+      padding-bottom: 87px;
     }
-  }
 
-  @media (max-width: $mobile) {
-    padding: 49px 60px;
-    width: 290px;
-    height: 256px;
+    @media (max-width: $mobile) {
+      padding-top: 65px;
+      padding-bottom: 65px;
+    }
   }
 }
 
@@ -140,17 +165,19 @@
   line-height: 130%;
 }
 
-.blog__read span {
+.blog__read p {
+  margin-bottom: 7px;
+
   font-family: var(--poppins);
+  font-weight: 500;
   font-size: 14px;
+  line-height: 130%;
 
   color: var(--gray);
+  border: none;
 }
 
 .blog__read h3 {
-  margin-top: 25px;
-  margin-bottom: 30px;
-
   font-family: var(--cormorant-garamond);
   font-weight: 600;
   font-size: 26px;
@@ -159,7 +186,8 @@
 }
 
 .blog__read a {
-  padding-bottom: 10px;
+  margin-top: auto;
+  padding-bottom: 5px;
 
   font-family: var(--poppins);
   font-size: 16px;
