--- a/source/sass/blocks/faq.scss
+++ b/source/sass/blocks/faq.scss
@@ -2,4 +2,24 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+
+  padding-top: 70px;
+  padding-bottom: 50px;
+
+  @media (max-width: $tablet) {
+    padding-top: 22px;
+  }
+
+  @media (max-width: $mobile) {
+    padding-top: 10px;
+  }
+}
+
+.faq h2 {
+  margin-bottom: 45px;
+
+  @media (max-width: $mobile) {
+    margin-bottom: 30px;
+    text-align: center;
+  }
 }
