--- a/source/sass/blocks/mailing.scss
+++ b/source/sass/blocks/mailing.scss
@@ -12,7 +12,7 @@
 }
 
 .mailing h3 {
-  margin-bottom: 25px;
+  margin-bottom: 8px;
 
   font-family: var(--cormorant-garamond);
   font-weight: bold;
@@ -24,11 +24,12 @@
 
   @media (max-width: $mobile) {
     padding-right: 50px;
+    margin-bottom: 11px;
   }
 }
 
 .mailing p {
-  margin-bottom: 50px;
+  margin-bottom: 35px;
 
   font-family: var(--poppins);
   font-size: 16px;
@@ -85,6 +86,14 @@
   color: var(--white);
   border: none;
   background-color: var(--transparent);
+
+  @media (max-width: $tablet) {
+    margin-right: 10px;
+  }
+
+  @media (max-width: $mobile) {
+    margin-right: 0;
+  }
 }
 
 .mailing span {
