--- a/source/sass/blocks/new.scss
+++ b/source/sass/blocks/new.scss
@@ -3,6 +3,23 @@
   flex-direction: column;
   align-items: center;
 
-  padding-top: 50px;
-  padding-bottom: 50px;
+  padding-top: 120px;
+  padding-bottom: 60px;
+
+  @media (max-width: $tablet) {
+    padding-top: 70px;
+    padding-bottom: 10px;
+  }
+
+  @media (max-width: $mobile) {
+    padding-top: 60px;
+  }
+}
+
+.new p {
+  padding: 0;
+
+  @media (max-width: $mobile) {
+    margin-bottom: 45px;
+  }
 }
