--- a/source/sass/blocks/slider.scss
+++ b/source/sass/blocks/slider.scss
@@ -28,8 +28,9 @@
 
 .slider__button {
   position: absolute;
-  top: -120px;
+  top: -125px;
 
+  padding: 0;
   width: 50px;
   height: 50px;
 
@@ -52,10 +53,12 @@
 }
 
 .slider__button svg {
+  display: flex;
   stroke: var(--gold)
 }
 
 .slider__button--next svg {
+  margin-left: auto;
   transform: rotate(180deg);
 }
 
