--- a/source/sass/global/common.scss
+++ b/source/sass/global/common.scss
@@ -30,18 +30,22 @@
 }
 
 .section h2 {
-  margin-bottom: 35px;
+  margin-bottom: 25px;
 
   font-family: var(--cormorant-garamond);
   font-weight: bold;
   font-size: 34px;
   line-height: 130%;
   letter-spacing: 0.03em;
+
+  @media (max-width: $tablet) {
+    margin-bottom: 20px;
+  }
 }
 
 .section p {
-  margin-bottom: 70px;
-  padding-bottom: 10px;
+  margin-bottom: 60px;
+  padding-bottom: 5px;
 
   font-family: var(--poppins);
   font-weight: 500;
@@ -49,4 +53,8 @@
   line-height: 130%;
 
   border-bottom: 1px solid var(--gold);
+
+  @media (max-width: $tablet) {
+    margin-bottom: 55px;
+  }
 }
