--- a/source/sass/global/variables.scss
+++ b/source/sass/global/variables.scss
@@ -7,9 +7,10 @@
   --gold: #a87b62;
   --light: #f6f5f4;
   --gold-light: #f0eae4;
-  --gold-light-03: rgba(240, 234, 228, 0.35);
 
+  --gold-light-03: rgba(240, 234, 228, 0.35);
   --white-015: rgba(255, 255, 255, 0.15);
+  --dark-light: rgba(219, 213, 208, 0.24);
 
   --poppins: "Poppins", "Arial", sans-serif;
   --cormorant-garamond: "Cormorant Garamond", "Times New Roman", serif;
