--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -21,3 +21,6 @@
 @import "blocks/faq.scss";
 @import "blocks/accordion.scss";
 @import "blocks/catalog.scss";
+@import "blocks/filter.scss";
+@import "blocks/control.scss";
+@import "blocks/form-accordion.scss";
