--- a/source/sass/global/variables.scss
+++ b/source/sass/global/variables.scss
@@ -8,9 +8,11 @@
   --light: #f6f5f4;
   --gold-light: #f0eae4;
 
+  --black-05: rgb(0, 0, 0, 0.5);
   --gold-light-03: rgba(240, 234, 228, 0.35);
   --white-015: rgba(255, 255, 255, 0.15);
   --dark-light: rgba(219, 213, 208, 0.24);
+  --shadow: rgba(226, 221, 215, 0.24);
 
   --poppins: "Poppins", "Arial", sans-serif;
   --cormorant-garamond: "Cormorant Garamond", "Times New Roman", serif;
