--- a/css/style.css
+++ b/css/style.css
@@ -363,8 +363,11 @@ template {
   --gold: #a87b62;
   --light: #f6f5f4;
   --gold-light: #f0eae4;
+  --black-05: rgb(0, 0, 0, 0.5);
   --gold-light-03: rgba(240, 234, 228, 0.35);
   --white-015: rgba(255, 255, 255, 0.15);
+  --dark-light: rgba(219, 213, 208, 0.24);
+  --shadow: rgba(226, 221, 215, 0.24);
   --poppins: "Poppins", "Arial", sans-serif;
   --cormorant-garamond: "Cormorant Garamond", "Times New Roman", serif; }
 
@@ -431,6 +434,9 @@ p {
   white-space: nowrap;
   clip-path: inset(100%);
   clip: rect(0 0 0 0);
+  overflow: hidden; }
+
+.hidden {
   overflow: hidden; }
 
 .section h2 {
@@ -1648,6 +1654,362 @@ p {
     .catalog__buttons {
       justify-content: center; } }
 
-@media (max-width: 767px) {
-  .catalog__button {
+.catalog__button {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 130%;
+  color: var(--dark);
+  border: none;
+  background-color: var(--transparent); }
+  @media (max-width: 767px) {
+    .catalog__button {
+      display: none; } }
+
+.catalog__pagination {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 130%;
+  color: var(--gray);
+  border: none;
+  background-color: var(--transparent); }
+  .catalog__pagination--active {
+    color: var(--dark); }
+
+.filter {
+  color: var(--dark); }
+
+@media (max-width: 1023px) {
+  .filter__form {
     display: none; } }
+
+.filter__form--open {
+  position: absolute;
+  top: 0;
+  left: 0;
+  display: flex;
+  flex-direction: column;
+  padding: 40px;
+  background-color: var(--white);
+  box-shadow: 0px 5px 32px var(--dark-light); }
+
+.filter fieldset {
+  padding: 28px 25px;
+  border: 1px solid var(--gold);
+  border-radius: 0;
+  cursor: pointer; }
+  .filter fieldset:not(:first-child) {
+    border-top: none; }
+
+.filter__title {
+  display: flex;
+  justify-content: space-between; }
+
+.filter__title h3 {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 130%; }
+
+.filter ul {
+  padding-top: 30px; }
+
+.filter li:not(:last-child) {
+  margin-bottom: 15px; }
+
+.filter label {
+  position: relative;
+  padding-left: 25px;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 130%;
+  color: var(--dark); }
+
+.filter input + label::before {
+  content: "";
+  position: absolute;
+  top: 2px;
+  left: 0;
+  width: 15px;
+  height: 15px;
+  border: 1px solid var(--gold);
+  border-radius: 0; }
+
+.filter input:checked + label::before {
+  background-color: var(--gold); }
+
+.filter button {
+  height: 68px;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 130%;
+  background-color: var(--gold);
+  border: 1px solid var(--gold);
+  cursor: pointer; }
+
+.filter button[type="submit"] {
+  margin-top: 25px;
+  width: 250px;
+  color: var(--white); }
+
+.filter button[type="reset"] {
+  margin-top: 25px;
+  width: 250px;
+  background-color: var(--white);
+  color: var(--dark); }
+
+.filter__toggle {
+  display: none; }
+  @media (max-width: 1023px) {
+    .filter__toggle {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      margin-bottom: 50px;
+      width: 100%;
+      color: var(--white); } }
+
+.control {
+  margin-top: 30px; }
+
+.control__range-wrap {
+  position: relative;
+  margin-bottom: 15px;
+  --left-width: 40px;
+  --right-width: 135px; }
+
+.control__scale {
+  position: relative;
+  height: 2px;
+  background-color: var(--gold-light); }
+
+.control__range .control__bar {
+  position: absolute;
+  height: 2px;
+  right: calc(100% - var(--right-width));
+  left: var(--left-width);
+  background-color: var(--gold); }
+
+.control__range .control__toggle {
+  position: absolute;
+  top: -7px;
+  left: 0;
+  width: 15px;
+  height: 15px;
+  padding: 0;
+  border: 8px solid var(--gold);
+  background-color: var(--gold);
+  border-radius: 50%;
+  cursor: pointer; }
+
+.control__range .control__toggle--min {
+  left: var(--left-width); }
+
+.control__range .control__toggle--max {
+  left: var(--right-width); }
+
+.control__range .control__toggle:hover {
+  transform: scale(1.3); }
+
+.control__price {
+  display: flex;
+  justify-content: flex-end;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 130%;
+  color: var(--dark); }
+
+.control__price label {
+  padding-left: 0; }
+
+.control__price input {
+  width: 65px;
+  border: none; }
+  .control__price input::placeholder {
+    display: flex;
+    justify-content: center; }
+
+.form-accordion__block {
+  display: none; }
+
+.form-accordion__item--active .form-accordion__button {
+  padding-bottom: 0; }
+
+.form-accordion__item--active .form-accordion__block,
+.form-accordion__item--nojs .form-accordion__block {
+  display: flex;
+  flex-direction: column; }
+
+.form-accordion__item--active .form-accordion__toggle {
+  transform: rotate(180deg); }
+
+.form-accordion__item--nojs .form-accordion__toggle {
+  background-image: none; }
+
+.login {
+  display: none; }
+  .login--open {
+    display: block;
+    animation: modal-open 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94) both; }
+
+.login__base {
+  position: absolute;
+  z-index: 4;
+  top: 0;
+  left: 0;
+  width: 100%;
+  min-height: 100vh;
+  overflow-y: auto;
+  background-color: var(--black-05); }
+
+.login__wrap {
+  position: absolute;
+  top: 450px;
+  left: 50%;
+  z-index: 10;
+  width: 430px;
+  height: 586px;
+  background-color: var(--gold-light);
+  box-shadow: 0px 5px 32px var(--shadow);
+  transform: translate(-50%, -50%); }
+  @media (max-width: 1023px) {
+    .login__wrap {
+      width: 442px; } }
+  @media (max-width: 767px) {
+    .login__wrap {
+      width: 270px;
+      height: 470px; } }
+
+.login__title img {
+  object-fit: cover;
+  width: 100%; }
+
+.login__title h2 {
+  font-family: var(--cormorant-garamond);
+  font-weight: bold;
+  font-size: 34px;
+  line-height: 130%;
+  display: flex;
+  justify-content: center;
+  margin-top: 50px;
+  margin-bottom: 15px;
+  color: var(--dark); }
+  @media (max-width: 767px) {
+    .login__title h2 {
+      margin-top: 35px;
+      margin-bottom: 7px;
+      font-size: 24px; } }
+
+.login form {
+  padding: 18px 42px 20px 48px; }
+  @media (max-width: 767px) {
+    .login form {
+      padding-left: 15px;
+      padding-right: 15px; } }
+
+.login input {
+  width: 100%;
+  height: 30px;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 21px;
+  border: none;
+  background-color: var(--transparent);
+  border-bottom: 1px solid var(--dark); }
+  .login input::placeholder {
+    color: var(--gray); }
+  .login input:focus {
+    outline: none;
+    border: none;
+    border-bottom: 1px solid var(--dark); }
+
+.login input[type="email"] {
+  margin-bottom: 35px; }
+
+.login a {
+  display: flex;
+  justify-content: flex-end;
+  margin-top: 7px;
+  font-weight: 500;
+  font-size: 12px;
+  line-height: 18px;
+  color: var(--gray); }
+  @media (max-width: 767px) {
+    .login a {
+      margin-top: 2px; } }
+
+.login button[type="submit"] {
+  margin-top: 45px;
+  width: 340px;
+  height: 68px;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 130%;
+  background-color: var(--gold);
+  border: 1px solid var(--gold);
+  color: var(--white);
+  cursor: pointer; }
+  @media (max-width: 767px) {
+    .login button[type="submit"] {
+      margin-top: 35px;
+      width: 240px; } }
+
+.login__account {
+  display: flex;
+  justify-content: center;
+  margin-top: 15px; }
+
+.login__account p {
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 21px;
+  color: var(--gray); }
+
+.login__account a {
+  display: initial;
+  margin-left: 5px;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 21px;
+  color: var(--dark); }
+
+.login__close {
+  position: absolute;
+  top: 11px;
+  right: 11px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 0;
+  width: 30px;
+  height: 30px;
+  background-color: var(--transparent);
+  border: none;
+  cursor: pointer; }
+  @media (max-width: 767px) {
+    .login__close {
+      top: 9px;
+      right: 6px; } }
+
+@keyframes modal-open {
+  0% {
+    opacity: 0; }
+  100% {
+    opacity: 1; } }
+
+.login-page {
+  display: flex;
+  justify-content: center;
+  padding-top: 30px; }
+
+.login-page__logo svg {
+  width: 66px;
+  height: 66px;
+  color: var(--gold); }
+
+.login-page__login {
+  display: flex;
+  justify-content: center; }
+
+.login-page__wrap {
+  position: static;
+  margin-top: 50px;
+  transform: none; }
