--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -252,12 +252,6 @@
   }
 }
 
-.header--nojs {
-  .header__toggle {
-    display: none;
-  }
-}
-
 .header--open,
 .header--nojs {
   @media (max-width: $tablet) {
@@ -285,4 +279,8 @@
       stroke: var(--white);
     }
   }
+}
+
+.header--nojs .header__toggle {
+  display: none;
 }
