--- a/source/sass/blocks/login.scss
+++ b/source/sass/blocks/login.scss
@@ -28,7 +28,7 @@
   height: 586px;
 
   background-color: var(--gold-light);
-  box-shadow: 0px 5px 32px var(--shadow);
+  box-shadow: 0 5px 32px var(--shadow);
   transform: translate(-50%, -50%);
 
   @media (max-width: $tablet) {
@@ -138,6 +138,16 @@
     margin-top: 35px;
     width: 240px;
   }
+
+  &:hover,
+  &:focus {
+    color: var(--dark);
+    background-color: var(--transparent);
+  }
+
+  &:active {
+    opacity: 0.6;
+  }
 }
 
 .login__account {
@@ -186,6 +196,10 @@
     top: 9px;
     right: 6px;
   }
+}
+
+.login__close svg {
+  color: var(--dark);
 }
 
 @keyframes modal-open {
