--- a/source/sass/blocks/mailing.scss
+++ b/source/sass/blocks/mailing.scss
@@ -86,6 +86,7 @@
   color: var(--white);
   border: none;
   background-color: var(--transparent);
+  cursor: pointer;
 
   @media (max-width: $tablet) {
     margin-right: 10px;
@@ -93,6 +94,15 @@
 
   @media (max-width: $mobile) {
     margin-right: 0;
+  }
+
+  &:hover,
+  &:focus {
+    color: var(--gold);
+  }
+
+  &:active {
+    opacity: 0.6;
   }
 }
 
