--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -13,7 +13,7 @@
 @import "blocks/promo.scss";
 @import "blocks/new.scss";
 @import "blocks/slider.scss";
-@import "blocks/pagination.scss";
+@import "blocks/swiper-pagination.scss";
 @import "blocks/product.scss";
 @import "blocks/gallery.scss";
 @import "blocks/blog.scss";
