--- a/source/sass/blocks/gallery.scss
+++ b/source/sass/blocks/gallery.scss
@@ -1,7 +1,5 @@
 .gallery {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+  text-align: center;
 
   padding-top: 55px;
   padding-bottom: 130px;
@@ -27,7 +25,7 @@
   }
 }
 
-.gallery p {
+.gallery__link {
   @media (max-width: $mobile) {
     margin-bottom: 45px;
   }
@@ -57,6 +55,7 @@
     grid-template-rows: 133px 87px;
     row-gap: 20px;
     grid-template-columns: 133px 231px 133px 133px;
+    padding-top: 25px;
   }
 
   @media (max-width: $mobile) {
@@ -64,6 +63,7 @@
     row-gap: 27px;
     grid-template-columns: 133px 133px 133px;
     column-gap: 24px;
+    padding-top: 0;
   }
 
   @media (max-width: $mid-mobile) {
@@ -74,20 +74,19 @@
 
 .gallery__item {
   @media (max-width: $mobile) {
-    &:nth-child(3) {
+    &--three-picture {
       display: none;
     }
   }
 
   @media (max-width: $mid-mobile) {
-    &:nth-child(4) {
+    &--four-picture {
       display: none;
     }
   }
 }
 
 .gallery__item img {
-  display: flex;
   background-color: var(--gold-light-03);
 }
 
