--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -2,30 +2,7 @@
   position: relative;
 
   padding-top: 30px;
-
-  &::before {
-    content: "";
-    position: absolute;
-    top: 115px;
-
-    width: 100%;
-    height: 1px;
-    background-color: var(--light);
-
-    @media (max-width: $tablet) {
-      display: none;
-    }
-  }
-
-  @media (max-width: $tablet) {
-    padding-top: 30px;
-    padding-bottom: 30px;
-  }
-
-  @media (max-width: $mobile) {
-    padding-top: 20px;
-    padding-bottom: 20px;
-  }
+  padding-bottom: 20px;
 
   &--open {
     @media (max-width: $tablet) {
@@ -51,16 +28,10 @@
 
 .header__wrapper {
   display: grid;
-  grid-template-columns: max-content 1fr max-content max-content;
-  grid-template-rows: auto auto;
-  row-gap: 19px;
-
-  padding-bottom: 20px;
+  grid-template-columns: max-content 1fr max-content;
+  padding-bottom: 15px;
 
   @media (max-width: $tablet) {
-    grid-template-rows: auto;
-    grid-template-columns: max-content 1fr max-content;
-    row-gap: 0;
     padding-bottom: 0;
   }
 }
@@ -69,9 +40,6 @@
   display: none;
 
   @media (max-width: $tablet) {
-    grid-row: 1/2;
-    grid-column: 1/2;
-
     display: block;
     padding: 0;
     padding-top: 23px;
@@ -93,9 +61,6 @@
 }
 
 .header form {
-  grid-row: 1/2;
-  grid-column: 1/2;
-
   padding-top: 2px;
 
   @media (max-width: $tablet) {
@@ -151,11 +116,7 @@
 }
 
 .header__logo {
-  grid-row: 1/2;
-  grid-column: 2/3;
-
-  display: flex;
-  justify-content: center;
+  justify-self: center;
   margin-right: 220px;
 
   @media (max-width: $tablet) {
@@ -175,9 +136,6 @@
 }
 
 .header__login {
-  grid-row: 1/2;
-  grid-column: 3/4;
-
   margin-left: 40px;
   margin-top: 12px;
   height: min-content;
@@ -189,9 +147,6 @@
   color: var(--dark);
 
   @media (max-width: $tablet) {
-    grid-row: 4/5;
-    grid-column: 1/-1;
-
     display: none;
     margin-left: 0;
     margin-top: 0;
@@ -204,9 +159,6 @@
 }
 
 .header__cart {
-  grid-row: 1/2;
-  grid-column: 4/5;
-
   margin-left: 40px;
   margin-top: 12px;
   padding: 0;
@@ -223,7 +175,6 @@
   cursor: pointer;
 
   @media (max-width: $tablet) {
-    grid-column: 3/4;
     margin-left: 0;
     padding-top: 12px;
   }
@@ -252,14 +203,10 @@
 .header--nojs {
   @media (max-width: $tablet) {
     .header__wrapper {
-      grid-template-rows: auto auto auto auto;
+      grid-template-rows: auto auto;
     }
 
     form {
-      display: flex;
-    }
-
-    .header__login {
       display: flex;
     }
 
