--- a/source/sass/blocks/slider.scss
+++ b/source/sass/blocks/slider.scss
@@ -1,9 +1,17 @@
 .slider {
   position: relative;
+  padding-top: 30px;
+
+  @media (max-width: $tablet) {
+    padding-top: 20px;
+  }
+
+  @media (max-width: $mobile) {
+    padding-top: 10px;
+  }
 }
 
 .slider__wrapper {
-  position: relative;
   z-index: 1;
   display: flex;
   width: 1200px;
@@ -28,7 +36,7 @@
 
 .slider__button {
   position: absolute;
-  top: -125px;
+  top: -95px;
 
   padding: 0;
   width: 50px;
@@ -40,11 +48,23 @@
   cursor: pointer;
 
   &--prev {
-    left: 0;
+    left: 15px;
+
+    @media (max-width: $tablet) {
+      left: 0;
+    }
   }
 
   &--next {
-    right: 0;
+    right: 15px;
+
+    @media (max-width: $tablet) {
+      right: 0;
+    }
+  }
+
+  @media (max-width: $tablet) {
+    top: -89px;
   }
 
   @media (max-width: $mobile) {
@@ -60,6 +80,11 @@
 .slider__button svg {
   display: flex;
   stroke: var(--gold);
+
+  @media (max-width: $tablet) {
+    width: 38px;
+    height: 15px;
+  }
 
   &:hover,
   &:focus {
@@ -129,7 +154,7 @@
     @media (max-width: $mobile) {
       display: flex;
       align-items: center;
-      margin-top: 22px;
+      margin-top: 32px;
     }
   }
 }
