--- a/source/sass/blocks/social-icon.scss
+++ b/source/sass/blocks/social-icon.scss
@@ -1,14 +1,11 @@
 .social-icon {
-  grid-column: 3/4;
   padding-top: 5px;
 
   @media (max-width: $tablet) {
-    grid-column: 2/3;
     grid-row: 2/3;
   }
 
   @media (max-width: $mobile) {
-    grid-column: 1/2;
     grid-row: 3/4;
 
     display: flex;
@@ -27,7 +24,7 @@
   }
 }
 
-.social-icon__item span {
+.social-icon__link span {
   font-family: var(--poppins);
   font-weight: 500;
   font-size: 16px;
@@ -49,11 +46,16 @@
   }
 }
 
-.social-icon__item svg {
+.social-icon__link svg {
   margin-right: 15px;
+  color: var(--white);
 
   @media (max-width: $mobile) {
     width: 20px;
     height: 20px;
   }
+}
+
+.social-icon__link:hover svg {
+  color: var(--gold);
 }
