--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -19,6 +19,7 @@
 @import "blocks/blog.scss";
 @import "blocks/faq.scss";
 @import "blocks/accordion.scss";
+@import "blocks/catalog-title.scss";
 @import "blocks/catalog.scss";
 @import "blocks/filter.scss";
 @import "blocks/control.scss";
