--- a/source/sass/blocks/slider.scss
+++ b/source/sass/blocks/slider.scss
@@ -14,7 +14,11 @@
 .slider__wrapper {
   z-index: 1;
   display: flex;
+
+  margin-left: auto;
+  margin-right: auto;
   width: 1200px;
+
   overflow: hidden;
 
   @media (max-width: $min-desktop) {
