--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -26,3 +26,4 @@
 @import "blocks/form-accordion.scss";
 @import "blocks/login.scss";
 @import "blocks/login-page.scss";
+@import "blocks/login-form.scss";
